vlib/v/checker/tests/generics_fn_called_no_arg_err.vv
struct Queue<T>{
    buffer []T
}

fn new_queue<T>() Queue<T> {
    q := Queue<T>{
        buffer: []T{cap: 1024}
    }
    return q
}

fn main() {
    q := new_queue()
    println(q)
}
